# db/sqlc/models.go
@@ -4,6 +4,8 @@ package db
 
 import (
 	"time"
+
+	"github.com/google/uuid"
 )
 
 type Contact struct {
@@ -21,6 +23,17 @@ type ContactHasSkill struct {
 	Owner     string `json:"owner"`
 	ContactID int32  `json:"contact_id"`
 	SkillID   int32  `json:"skill_id"`
+}
+
+type Session struct {
+	ID           uuid.UUID `json:"id"`
+	Username     string    `json:"username"`
+	SessionToken string    `json:"session_token"`
+	UserAgent    string    `json:"user_agent"`
+	ClientIp     string    `json:"client_ip"`
+	IsBlocked    bool      `json:"is_blocked"`
+	ExpiresAt    time.Time `json:"expires_at"`
+	CreatedAt    time.Time `json:"created_at"`
 }
 
 type Skill struct {
