# docs/swagger.yaml
@@ -1,52 +1,4 @@
 definitions:
-  api.CreateUserRequest:
-    properties:
-      email:
-        type: string
-      full_name:
-        type: string
-      password:
-        minLength: 6
-        type: string
-      username:
-        type: string
-    required:
-    - email
-    - full_name
-    - password
-    - username
-    type: object
-  api.LoginUserRequest:
-    properties:
-      password:
-        minLength: 6
-        type: string
-      username:
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  api.LoginUserResponse:
-    properties:
-      access_token:
-        type: string
-      user:
-        $ref: '#/definitions/api.UserResponse'
-    type: object
-  api.UserResponse:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      fullname:
-        type: string
-      password_last_changed:
-        type: string
-      username:
-        type: string
-    type: object
   api.createContactHasSkillRequest:
     properties:
       contact_id:
@@ -89,6 +41,63 @@ definitions:
     - skill_level
     - skill_name
     type: object
+  api.createUserRequest:
+    properties:
+      email:
+        type: string
+      full_name:
+        type: string
+      password:
+        minLength: 6
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - full_name
+    - password
+    - username
+    type: object
+  api.loginUserRequest:
+    properties:
+      password:
+        minLength: 6
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  api.loginUserResponse:
+    properties:
+      access_token:
+        type: string
+      access_token_expires_at:
+        type: string
+      session_id:
+        type: string
+      session_token:
+        type: string
+      session_token_expires_at:
+        type: string
+      user:
+        $ref: '#/definitions/api.userResponse'
+    type: object
+  api.renewAccessTokenRequest:
+    properties:
+      session_token:
+        type: string
+    required:
+    - session_token
+    type: object
+  api.renewAccessTokenResponse:
+    properties:
+      access_token:
+        type: string
+      access_token_expires_at:
+        type: string
+    type: object
   api.updateContactRequest:
     properties:
       email:
@@ -120,6 +129,19 @@ definitions:
         type: string
     required:
     - id
+    type: object
+  api.userResponse:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      fullname:
+        type: string
+      password_last_changed:
+        type: string
+      username:
+        type: string
     type: object
   db.Contact:
     properties:
@@ -486,6 +508,31 @@ paths:
       summary: Get a skill
       tags:
       - Skill
+  /tokens/renew_access:
+    post:
+      consumes:
+      - application/json
+      description: This function is used to renew an access token for an user provinding
+        the sessionToken.
+      parameters:
+      - description: Login User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/api.renewAccessTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.renewAccessTokenResponse'
+      security:
+      - bearerAuth: []
+      summary: Renew access token
+      tags:
+      - token
   /users:
     post:
       consumes:
@@ -497,14 +544,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/api.CreateUserRequest'
+          $ref: '#/definitions/api.createUserRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.UserResponse'
+            $ref: '#/definitions/api.userResponse'
       summary: Create a new user
       tags:
       - user
@@ -520,14 +567,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/api.LoginUserRequest'
+          $ref: '#/definitions/api.loginUserRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.LoginUserResponse'
+            $ref: '#/definitions/api.loginUserResponse'
       security:
       - bearerAuth: []
       summary: Login an user
